--- a/Product Landing Page/styles.css
+++ b/Product Landing Page/styles.css
@@ -17,6 +17,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
+    padding: 5px;
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -62,6 +63,10 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 700px;
+}
+
+#features {
     max-width: 700px;
 }
 
