--- a/Product Landing Page/styles.css
+++ b/Product Landing Page/styles.css
@@ -1,158 +1,128 @@
-/*.content {
+html {scroll-behavior: smooth;}
+body {
+  font-family: sans-serif;
+  font-weight: 300;
+  background: #eee;
+}
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  min-height: 75px;
+  align-items: center;
+  justify-content: space-between;
+  background: #eee;
+}
+nav {
+  width: 50%;
+  height: 100%;
+}
+header ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  list-style-type: none;
+  margin: 0;
+}
+li > a {
+  text-decoration: none; 
+  color: #000;
+  padding: 8px;
+}:hover {
+    background: grey;
+    border-radius: 5px;
+    color: white;
+  }
+main {
+  margin: 4rem auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-}*/
-html {
-    scroll-behavior: smooth;
+  max-width: 700px;
 }
-
-body {
-    font-family: sans-serif;
-    font-weight: 300;
-    background: #eee;
-}
-
-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding: 5px;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-    background: #eee;
-}
-
-nav {
-    width: 50%;
-    justify-self: flex-end;
-}
-
-header ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    list-style-type: none;
-}
-
-li>a {
-    text-decoration: none;
-    color: #000;
-}
-
 form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  }
 form input {
-    margin-bottom: 10px;
-    padding: 5px;
+  margin-bottom: 10px;
+  padding: 5px;  
 }
-
-img {
-    max-width: 300px;
-}
-
-main {
-    margin: 4rem auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 700px;
-}
-
-#features {
-    max-width: 700px;
-}
-
-#features div {
-    display: flex;
-}
-
+img {max-width: 300px;}
+#features div {display: flex;}
 #features div div {
-    flex-direction: column;
-    justify-content: center;
+  flex-direction: column;
+  justify-content: center;
 }
-
-#features p,
-#features h2 {
-    margin: 0;
-    max-width: 75vw;
+#features p, #features h2 {
+  margin: 0;
+  max-width: 75vw;
 }
-
-#features h2,
+#features h2, #features img {padding-top: 2rem;}
 #features img {
-    padding-top: 2rem;
+  height: 70px;
+  align-self: center;
+  margin-right: 4rem;
 }
-
-#features img {
-    height: 70px;
-    align-self: center;
-    margin-right: 4rem;
-}
-
 iframe {
-    margin: 4rem;
+  margin: 4rem; 
+  width: 50vw;
+  max-width: 650px;
 }
-
 #pricing {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
-
 .block {
-    display: flex;
-    flex-direction: column;
-    margin: 1rem;
-    text-align: center;
-    border: 1px solid;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+  text-align: center;
+  border: 1px solid;
+  align-items: center;
 }
-
-.block>div {
-    background: #ddd;
+.block > div {
+  background: #ddd;
+  width: 100%;
 }
-
-.block>ul {
-    list-style-type: none;
-    padding: 1rem 3rem;
+.block > ul {
+  list-style-type: none;
+  padding: 1rem 2rem;
 }
-
 .button {
-    margin: 1rem auto;
-    padding: 0 1rem;
+  margin: 1rem auto;
+  padding: 0 1rem;
 }
-
 .yellow-button {
-    background-color: #e1e151;
-    border: none;
-    font-size: 15px;
-    padding: 10px 20px;
-    margin: 5px;
+  background-color: #fcea00;
+  border: none;
+  font-size: 15px;
+  padding: 10px 20px;
+  margin: 5px;
 }
-
 input[class="yellow-button"] {
-    font-weight: 600;
-    padding: 5px 20px;
+  font-weight: 600;
+  padding: 5px 20px;
 }
-
 @media (max-width: 650px) {
-    header {
-        flex-direction: column;
-        justify-items: space-between;
-        text-align: center;
-    }
-
-    #features img {
-        margin-right: 15px;
-    }
-
-    ul {
-        padding: 0;
-    }
+  header {
+    flex-direction: column;
+    justify-items: space-between;
+    text-align: center;
+    padding: 10px 0;
+  }
+  main {margin: 5.5rem auto;}
+  #features img {margin-right: 15px;}
+  nav > ul {padding: 0;}
+  #pricing {flex-direction: column;}
+  iframe{width: 90vw;}
+}
+@media (max-width: 520px) {
+  main {margin-top: 8rem;}
+  nav > ul {flex-direction: column;}
+  nav > ul > li {padding: 5px 0;}
 }
