--- a/Personal Portfolio/styles.css
+++ b/Personal Portfolio/styles.css
@@ -28,25 +28,37 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 section:nth-of-type(1) {
   background: linear-gradient(225deg, black, grey);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+section a {
+  width: 30%;
+}
+section img {
+  width: 100%;
 }
 section:nth-of-type(2) {
   background-color: #9191e2;
   padding: 10rem 2rem;
-  
+} 
+section:nth-of-type(2) p {
+  font-size: 18px;
 }
 section:nth-of-type(2) > div {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   margin: 5rem auto;
-  max-width: 1280px;
+  max-width: 1200px;
 }
 section:nth-of-type(2) > div > a {
-  padding: 2em;
-  flex: 1 1 80px;
+  margin: 1em;
+
 }
 section:nth-of-type(3) {
   background-color: #2e2e2e;
