--- a/Personal Portfolio/styles.css
+++ b/Personal Portfolio/styles.css
@@ -1,16 +1,30 @@
 /*html{scroll-behavior: smooth;}*/
+/*Mikro-Animationen (Beim Hovern wird Bild von SW -> Farbig, oder wird größer*/
+
+:root {
+  --main-red: rgb(170, 45, 65);
+  --main-wine-red: rgb(90, 35, 44);
+  --main-brown: rgb(66, 20, 4);
+  --main-black: rgb(10,0,0);
+  --main-grey: rgb(50, 60, 68);
+  --main-section1-background: linear-gradient(180deg, var(--main-black) 80%, var(--main-wine-red));
+  --main-section2-background: linear-gradient(180deg, var(--main-wine-red) 80%, var(--main-brown));
+  --main-section3-background: linear-gradient(180deg, var(--main-brown), var(--main-black));
+}
+
 body {margin: 0;}
 main {
   font-family: sans-serif;
   color: white;
 }
 nav {
-  background: #e25252;
+  background: var(--main-red);
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 7vh;
+  height: 5vh;
+  min-height: 50px;
   padding-left: auto;
   display: flex;
   flex-direction: row;
@@ -18,36 +32,49 @@ nav {
   align-items: center;
 }
 nav > a {
-  padding: 2rem;
+  padding: 1rem 2rem;
   text-decoration: none;
   color: white;
 }
+nav > a:hover {background: var(--main-grey);}
 section {
-  height: 100vh;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
+h1 {font-size: 60px;}
+h2 {font-size: 45px;}
+h1, h2 {margin: 5px;}
 section:nth-of-type(1) {
-  background: linear-gradient(225deg, black, grey);
+  background: var(--main-section1-background);
+  height: 100vh;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
-section a {
-  width: 30%;
+section:nth-of-type(1) p {
+  color: var(--main-red);
+  font-size: xx-large;
+  font-weight: 300;
+  margin: 0 auto;
 }
 section img {
   width: 100%;
+  min-height: 300px;
+  object-fit: cover;
 }
 section:nth-of-type(2) {
-  background-color: #9191e2;
+  background: var(--main-section2-background);
   padding: 10rem 2rem;
 } 
-section:nth-of-type(2) p {
-  font-size: 18px;
+section:nth-of-type(2) > h2 {
+  text-decoration: underline;
+}
+section:nth-of-type(2) > div > div p {
+  padding: 10px 0;
+  margin: 0;
 }
 section:nth-of-type(2) > div {
   display: flex;
@@ -55,12 +82,62 @@ section:nth-of-type(2) > div {
   flex-wrap: wrap;
   margin: 5rem auto;
   max-width: 1200px;
+  gap: 40px;
+  justify-content: center;
 }
-section:nth-of-type(2) > div > a {
-  margin: 1em;
-
+section:nth-of-type(2) > div > div {
+  width: 30%;
+  min-width: 300px;
+}
+section:nth-of-type(2) > div > div > a {
+  display: block;
+  background-color: var(--main-grey);
+  text-decoration: none;
+  color: white;
+}
+section:nth-of-type(2) > div > div > a > img {
+  filter: grayscale(100%);
+}
+section:nth-of-type(2) > div > div > a:hover {
+  animation-name: imagefilter;
 }
 section:nth-of-type(3) {
-  background-color: #2e2e2e;
-  height: 85vh;
+  background: var(--main-section3-background);
+  height: 80vh;
+  min-height: 600px;
+  display: flex;
+}
+section:nth-of-type(3) > div {
+  margin-top: 3em; 
+  height: 40px;  
+  display: flex;
+  align-items: center;
+}
+section:nth-of-type(3) > div > a {
+  text-decoration: none;
+  color: white;
+  padding: 10px;
+  font-size: large;
+  transition: font-size 1s ;
+}
+section:nth-of-type(3) > div > a:hover {
+  display: inline-block;
+  font-size: x-large;
+}
+footer {
+  background: var(--main-black);
+}
+footer {
+  border-top: 3px solid var(--main-red);
+  height: 10vh;
+  max-height: 70px;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+footer p {margin: 0;}
+@keyframes imagefilter {
+  0% {filter: grayscale(100%);}
+  100% {filter: grayscale(0%)}
 }
